# tenhou-parser-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: enums.rs  main.rs  round.rs  serialize.rs  utils.rs  yaku.rs
